Fixed profile image overflow on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2072,15 +2072,15 @@ input, select, textarea {
 				#main > .panel.intro banner .pic {
 					text-decoration: none;
 					position: relative;
-					-moz-flex-grow: 0;
-					-webkit-flex-grow: 0;
-					-ms-flex-grow: 0;
-					flex-grow: 0;
-					-moz-flex-shrink: 0;
-					-webkit-flex-shrink: 0;
-					-ms-flex-shrink: 0;
-					flex-shrink: 0;
-					width: 16em;
+					-moz-flex-grow: 1;
+					-webkit-flex-grow: 1;
+					-ms-flex-grow: 1;
+					flex-grow: 1;
+					-moz-flex-shrink: 1;
+					-webkit-flex-shrink: 1;
+					-ms-flex-shrink: 1;
+					flex-shrink: 1;
+					width: 24em;
 					height: 100%;
 				}
 
@@ -2103,10 +2103,10 @@ input, select, textarea {
 						left: 0;
 						width: 100%;
 						height: 100%;
-						-moz-object-fit: contain;
-						-webkit-object-fit: contain;
-						-ms-object-fit: contain;
-						object-fit: contain;
+						-moz-object-fit: cover;
+						-webkit-object-fit: cover;
+						-ms-object-fit: cover;
+						object-fit: cover;
 						-moz-object-position: center;
 						-webkit-object-position: center;
 						-ms-object-position: center;
@@ -2177,6 +2177,7 @@ input, select, textarea {
 						}
 
 				}
+
 
 /* Timeline container */
 				#timeline_container{
